better description